--- a/style.css
+++ b/style.css
@@ -1,12 +1,50 @@
+.container {
+    display: flex;
+    flex-direction: row;
+}
+
 .todo_table {
-    width: 80%;
-    position: absolute;
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, -50%);
+    width: 60%;
+    position: relative;
     background: burlywood;
     border-radius: 10px;
-    padding: 40px;
+    padding: 20px;
     font-family: sans-serif;
-    font-size: x-large;
+    font-size: large;
+    height: fit-content;
+}
+
+.inputs {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 3%;
+}
+
+button {
+    background-color: burlywood;
+    border: none;
+    color: white;
+    padding: 2%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+}
+
+input[type="text"] {
+    width: 5%;
+    border-radius: 5px;
+    padding: 2%;
+}
+
+textarea {
+    width: 50%;
+    height: 50%;
+    border-radius: 5px;
+}
+
+.update_id {
+    margin-top: 5%;
 }
